updated to netstandard 1.6.1

--- a/src/OdeToCode.AddFeatureFolders/OdeToCode.AddFeatureFolders.csproj
+++ b/src/OdeToCode.AddFeatureFolders/OdeToCode.AddFeatureFolders.csproj
@@ -13,7 +13,7 @@
     <PackageLicenseUrl>https://raw.githubusercontent.com/OdeToCode/AddFeatureFolders/master/LICENSE</PackageLicenseUrl>
     <RepositoryType>git</RepositoryType>
     <RepositoryUrl>https://raw.githubusercontent.com/OdeToCode/AddFeatureFolders/</RepositoryUrl>
-    <NetStandardImplicitPackageVersion>1.6.0</NetStandardImplicitPackageVersion>
+    <NetStandardImplicitPackageVersion>1.6.1-*</NetStandardImplicitPackageVersion>
     <PackageTargetFallback Condition=" '$(TargetFramework)' == 'netstandard1.6' ">$(PackageTargetFallback);dnxcore50</PackageTargetFallback>
     <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
     <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
